--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Phone: 8523885936</p>
+    <p>EmailID:jasmithachukka@gmail.com</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/jasmitha-chukka-bb4242356" target="_blank">Jasmitha Chukka</a></p>
   </section>
 
